# jju

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  example-keybindings.toml  justfile
crates/jju-core/: Cargo.toml
crates/jju-core/src/: interactive.rs  lib.rs  split_hunk.rs  stack_sync.rs
crates/jju-jj/: Cargo.toml
crates/jju-jj/src/: lib.rs  ops.rs  repo.rs  split_hunk.rs  stack_sync.rs
crates/jju-jj/src/ops/: ancestry.rs  bookmark.rs  command.rs  conflict.rs  diff.rs  git.rs  operation.rs  rebase.rs  revision.rs
crates/jju-jj/src/repo/: display.rs  prefixes.rs  queries.rs  revset.rs
crates/jju-jj/src/repo/revset/: aliases.rs  query.rs
crates/jju-jj/src/split_hunk/: application.rs  command.rs  diff.rs  plan.rs  preview.rs  repo.rs  selection.rs  workflow.rs
crates/jju-jj/src/split_hunk/diff/: header.rs  model.rs  parse.rs  tests.rs
crates/jju-jj/src/split_hunk/selection/: parse.rs  planner.rs  tests.rs
crates/jju-jj/src/stack_sync/: confirm.rs  discover.rs  execute.rs
src/: cli.rs  cmd.rs  jj_lib_helpers.rs  main.rs
src/cmd/: jj.rs  jj_tui.rs
src/cmd/jj/: cli.rs  dispatch.rs  split_hunk.rs  stack_sync.rs  tree.rs
src/cmd/jj/split_hunk/: apply.rs  execute.rs  parse.rs  select.rs
src/cmd/jj_tui/: action.rs  app.rs  cli_tree.rs  commands.rs  controller.rs  effect.rs  engine.rs  keybindings.rs  preview.rs  refresh.rs  runner.rs  state.rs  test_support.rs  theme.rs  tree.rs  ui.rs  vm.rs
src/cmd/jj_tui/action/: routing.rs
src/jj_lib_helpers/: display.rs  prefixes.rs  queries.rs  revset.rs
xtask/: Cargo.toml
xtask/src/: main.rs
(+223 files in other folders)
