[workspace]
members = ["xtask"]
resolver = "2"

[package]
name = "jju"
version = "0.1.0"
edition = "2024"

[dependencies]
# error handling
color-eyre = "0.6.5"
eyre = "0.6.12"

# cli
clap = { version = "4.5.56", default-features = false, features = [
    "std",
    "derive",
    "help",
    "usage",
    "error-context",
    "env",
    "color",
] }
duct = "1.1.1"

# terminal colors
colored = "3.1.1"

# logging
env_logger = "0.11.8"
log = "0.4.29"

# datetime
chrono = { version = "0.4.43", features = ["serde"] }

# jj version control library
jj-lib = { version = "0.37.0", features = ["git"] }
pollster = "0.4.0"
itertools = "0.14.0"

# TUI
ratatui = { version = "0.30.0", features = ["crossterm"] }
tui-tree-widget = "0.24.0"
tui-popup = "0.7.2"
unicode-width = "0.2.2"
smallvec = { version = "1.13", features = ["serde"] }
syntect = { version = "5.3.0", default-features = false, features = ["default-fancy"] }

# hash maps
ahash = "0.8.12"

# regex
regex = "1"
