[package]
name = "jju-jj"
version = "0.1.0"
edition = "2024"

[dependencies]
ahash = "0.8.12"
chrono = { version = "0.4.43", features = ["serde"] }
colored = "3.1.1"
duct = "1.1.1"
eyre = "0.6.12"
itertools = "0.14.0"
jj-lib = { version = "0.37.0", features = ["git"] }
jju-core = { path = "../jju-core" }
log = "0.4.29"
regex = "1"
